Resolve Checkstyle parsing error on Player.java